Add more iframes

--- a/simple-iframe-example.html
+++ b/simple-iframe-example.html
@@ -13,5 +13,10 @@
     src="./outer-iframe-content-page.html"
   >
   </iframe>
+  <iframe 
+  title="Outer iFrame Title Attribute"
+  src="./outer-iframe-content-page.html"
+>
+</iframe>
 </body>
 </html>
