Remove unneeded redundant iframes

--- a/simple-iframe-example.html
+++ b/simple-iframe-example.html
@@ -11,12 +11,8 @@
   <iframe 
     title="Outer iFrame Title Attribute"
     src="./outer-iframe-content-page.html"
+    aria-hidden="true"
   >
   </iframe>
-  <iframe 
-    title="Outer iFrame Title Attribute"
-    src="./outer-iframe-content-page.html"
-  >
-</iframe>
 </body>
 </html>
