--- a/simple-iframe-example.html
+++ b/simple-iframe-example.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <button></button>
+  <!-- adding aria-hidden="true" to the iframe removes the 'title' attribute from the screenreader rotor articles menu, but still has keyboard focus -->
   <iframe 
     title="Outer iFrame Title Attribute"
     src="./outer-iframe-content-page.html"
