Move pages to folder, add screenshot to folder, and fix typo

--- a/example-pages/outer-iframe-content-page.html
+++ b/example-pages/outer-iframe-content-page.html
@@ -13,7 +13,7 @@
 <body>
   <!-- it's possible to hide some content from the screenreader rotor articles menu and keyboard focus using the 'hidden' attribute, while still leaving sibling elements, such as another iframe, untouched -->
   <p hidden>
-    Outer iFrame document body content.
+    Outer iframe document body content.
   </p>
   <iframe 
   title="Inner iFrame Title Attribute"
