Add button note

--- a/example-pages/simple-iframe-example.html
+++ b/example-pages/simple-iframe-example.html
@@ -7,6 +7,7 @@
   <title>Outer Document Title</title>
 </head>
 <body>
+  <!-- this button is simply here for something to tab to and away from -->
   <button></button>
   <!-- adding aria-hidden="true" to the iframe removes the 'title' attribute from the screenreader rotor articles menu, but still has keyboard focus -->
   <iframe 
