--- a/example-pages/outer-iframe-content-page.html
+++ b/example-pages/outer-iframe-content-page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- it's not possible to use the 'hidden' attribut with <head> -->
+<!-- it's not possible to use the 'hidden' attribute with <head> -->
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
