--- a/example-pages/outer-iframe-content-page.html
+++ b/example-pages/outer-iframe-content-page.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- if there isn't a <title> for embedded iframe content, the screenreader will say 'frame #' -->
-  <!-- using the 'hidden' attribute for <title>, or adding style="visibility: hidden" or style="display: none", has no effect on the screenreader rotor articles menu or keyboard focus -->
+  <!-- if there isn't a <title> for embedded iframe content, the screenreader will read 'frame #' -->
+  <!-- using the 'hidden' attribute for <title>, or adding style="visibility: hidden" or style="display: none", has no effect on the screenreader rotor articles menu or keyboard focusability -->
   <title>Outer iFrame Document Title</title>
 </head>
 <!-- using the 'hidden' attribute on <body> hides child elements, such as <p>'s and <iframe>'s -->
