--- a/example-pages/simple-iframe-example.html
+++ b/example-pages/simple-iframe-example.html
@@ -9,7 +9,7 @@
 <body>
   <!-- this button is simply here for something to tab to and away from -->
   <button></button>
-  <!-- adding aria-hidden="true" to the iframe removes the 'title' attribute from the screenreader rotor articles menu, but still has keyboard focus -->
+  <!-- adding aria-hidden="true" to the iframe removes the 'title' attribute from the screenreader rotor articles menu, but still is keyboard focusable -->
   <iframe 
     title="Outer iFrame Title Attribute"
     src="./outer-iframe-content-page.html"
