Add element attributes for lighthouse a11y testing

--- a/example-pages/inner-iframe-content-page.html
+++ b/example-pages/inner-iframe-content-page.html
@@ -8,7 +8,7 @@
   <title>Inner iFrame Document Title</title>
 </head>
 <body>
-  <p>
+  <p style="color:blue">
     Inner iframe document body content.
   </p>
 </body>
