--- a/example-pages/simple-iframe-example.html
+++ b/example-pages/simple-iframe-example.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- this button is simply here for something to tab to and away from -->
-  <button></button>
+  <button title="placeholder button"></button>
   <!-- adding aria-hidden="true" to the iframe removes the 'title' attribute from the screenreader rotor articles menu, but is still keyboard focusable -->
   <iframe 
     title="Outer iFrame Title Attribute"
